--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Restaurant Mgmt System that Automate the old System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
+
   },
   "author": "Nathnael Zelalem",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
 }
