adding user model with authControl

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nathnael Zelalem",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
