add sign up and login, prptected

--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ PORT = 8000
 DATABASE_LOCAL = mongodb://localhost:27017/Restaurant
 DATABASE_PASSWORD = UZ8NzyORmOcIPUK9
 DATABASE =mongodb+srv://nathnaelzelalem:<PASSWORD>@restaurant.k0gc3.mongodb.net/?retryWrites=true&w=majority&appName=Restaurant
+JWT_SECRET =this-is-a-restaurant-mgmt-system
+JWT_EXPIRE_IN =90d
