--- a/config.env
+++ b/config.env
@@ -5,3 +5,5 @@ DATABASE_PASSWORD = UZ8NzyORmOcIPUK9
 DATABASE =mongodb+srv://nathnaelzelalem:<PASSWORD>@restaurant.k0gc3.mongodb.net/?retryWrites=true&w=majority&appName=Restaurant
 JWT_SECRET =this-is-a-restaurant-mgmt-system
 JWT_EXPIRE_IN =90d
+
+JWT_COOKIE_EXPIRES_IN = 90
